# gworkspace-mcp

./: .env.local.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Makefile  PHASE2_COMPLETION.md  README.md  UNIFIED_PUBLISHING_SUMMARY.md  mypy.ini  pyproject.toml  pyrightconfig.json
.ai-trackdown/: config.yaml  project.yaml
.github/workflows/: ci.yml
docs/: PUBLISHING.md  README.md  formatting-guide.md  index.md
docs/api/: README.md  calendar.md  docs.md  drive.md  gmail.md  sheets.md  slides.md  tasks.md
docs/decisions/: adr-001-no-gws-cli-integration.md
docs/development/: README.md  contributing.md  releasing.md  testing.md
docs/getting-started/: README.md  authentication.md  installation.md  quickstart.md
docs/guides/: README.md  claude-desktop.md  cli-usage.md
docs/research/: PHASE2_COMPLETION.md  README.md  code-review-2026-02-10.md  feature-gap-analysis-2026-02-10.md  pypi-publishing-setup-2026-02-10.md
scripts/: publish_to_pypi.sh  update_homebrew.py  wait_and_update_homebrew.sh
src/google_workspace_mcp/: __init__.py  __version__.py
src/google_workspace_mcp/auth/: __init__.py  models.py  oauth_manager.py  token_storage.py
src/google_workspace_mcp/cli/: main.py
src/google_workspace_mcp/migrations/: 0001_rename_credentials_dir.yaml  __init__.py  models.py  operations.py  runner.py
src/google_workspace_mcp/server/: __init__.py  google_workspace_server.py
src/gworkspace_mcp/: __init__.py  __version__.py
src/gworkspace_mcp/auth/: __init__.py  models.py  oauth_manager.py  token_storage.py
src/gworkspace_mcp/cli/: __init__.py  main.py
src/gworkspace_mcp/conversion/: pandoc_service.py
src/gworkspace_mcp/migrations/: 0001_rename_credentials_dir.yaml  0002_rename_service_key.yaml  __init__.py  models.py  operations.py  runner.py
src/gworkspace_mcp/server/: __init__.py  base.py  constants.py  google_workspace_server.py  server.py
src/gworkspace_mcp/server/services/: __init__.py  accounts.py  calendar.py  docs.py  drive.py  gmail.py  sheets.py  slides.py  tasks.py
src/gworkspace_mcp/server/services/docs/: __init__.py  comments.py  core.py  formatting.py  markdown.py
src/gworkspace_mcp/server/services/drive/: __init__.py  files.py  sharing.py  sync.py
src/gworkspace_mcp/server/services/gmail/: __init__.py  labels.py  messages.py  organize.py  settings.py
src/gworkspace_mcp/server/services/sheets/: __init__.py  core.py  formatting.py
src/gworkspace_mcp/server/services/slides/: __init__.py  content.py  core.py
src/gworkspace_mcp/skills/gworkspace-mcp/: SKILL.md  metadata.json
tests/: __init__.py  conftest.py  test_gmail_attachments.py
tests/cli/: __init__.py  test_setup.py
tests/integration/: __init__.py  test_google_workspace_server.py
tests/unit/: __init__.py  test_accounts_service.py  test_oauth_manager.py  test_token_models.py  test_token_storage.py
tests/unit/migrations/: __init__.py  test_models.py  test_operations.py  test_runner.py
tickets/issues/: ISS-0001.md
